--- a/app/templates/dashboard_layout.html
+++ b/app/templates/dashboard_layout.html
@@ -44,7 +44,7 @@
             <div class="flex flex-row items-center justify-between">
                 <h3 class="text-2xl font-bold">Add Ticket</h3>
                 <button onclick="closeTicketOverlay()">
-                    <img src="{{ url_for('static', filename='images/plus.png') }}" alt="close" class="h-6 w-6 object-contain rotate-45">
+                    <img src="/static/images/plus.png" alt="close" class="h-6 w-6 object-contain rotate-45">
                 </button>
             </div>
 
