--- a/app/templates/dashboard_manager.html
+++ b/app/templates/dashboard_manager.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard_layout.html' %}
-{% from 'components/dropdowns.html' import status_menu_items, priority_menu_items, assignee_menu_base, filter_priority_menu_items %}
+{% from 'components/dropdowns.html' import status_menu_items, priority_menu_items, assignee_menu_base, filter_priority_menu_items, filter_status_menu_items %}
 
 {% block content %}
 <div class="flex flex-1">
@@ -36,18 +36,7 @@
                         <img src="/static/images/chevron.svg" class="w-4 h-4" alt="Chevron" />
                     </button>
                     <div id="filter-status-menu" class="absolute left-0 top-full mt-1 bg-white rounded-lg shadow-lg border border-gray-200 py-1 min-w-[150px] z-50 hidden">
-                        <button class="w-full text-left px-3 py-1.5 hover:bg-gray-100 text-sm" data-filter-status="">
-                            <span class="inline-block w-2 h-2 rounded-full bg-gray-400 mr-2"></span>All Statuses
-                        </button>
-                        <button class="w-full text-left px-3 py-1.5 hover:bg-gray-100 text-sm" data-filter-status="1">
-                            <span class="inline-block w-2 h-2 rounded-full bg-yellow-400 mr-2"></span>Open
-                        </button>
-                        <button class="w-full text-left px-3 py-1.5 hover:bg-gray-100 text-sm" data-filter-status="2">
-                            <span class="inline-block w-2 h-2 rounded-full bg-blue-400 mr-2"></span>In Progress
-                        </button>
-                        <button class="w-full text-left px-3 py-1.5 hover:bg-gray-100 text-sm" data-filter-status="3">
-                            <span class="inline-block w-2 h-2 rounded-full bg-green-400 mr-2"></span>Closed
-                        </button>
+                        {{ filter_status_menu_items() }}
                     </div>
                 </div>
 
@@ -70,7 +59,7 @@
                 </div>
 
                 <!-- Clear filters button (shown if filter is active) -->
-                <button id="clear-filters-btn" class="hidden px-3 py-2 text-sm text-gray-500 hover:text-gray-700 hover:bg-gray-100 rounded-lg">
+                <button id="clear-filters-btn" class="hidden px-3 py-2 text-sm text-gray-500 hover:text-gray-700 hover:bg-gray-100 rounded-lg" onclick="clearFilters()">
                     Clear filters
                 </button>
             </div>
